Добавлена документация по категориям
